@@ -43,6 +43,7 @@ class UserPreferences(object):
     spaces_instead_of_tabs = False
     tab_width = 8
     auto_indent = True
+    line_numbers = True
 
     def __init__(self):
         self.load()
@@ -61,6 +62,8 @@ class UserPreferences(object):
         cp.smart_get(self, 'spaces_instead_of_tabs', smart_bool, 'editor')
         cp.smart_get(self, 'tab_width', int, 'editor')
         cp.smart_get(self, 'auto_indent', smart_bool, 'editor')
+        cp.smart_get(self, 'line_numbers', smart_bool, 'editor')
+
 
     def save(self):
         cp = SmartParser()
@@ -76,6 +79,7 @@ class UserPreferences(object):
                str(self.spaces_instead_of_tabs))
         cp.set('editor', 'tab_width', str(self.tab_width))
         cp.set('editor', 'auto_indent', str(self.auto_indent))
+        cp.set('editor', 'line_numbers', str(self.auto_indent))
 
         directory = get_user_config_dir()
         if not exists(directory):
