@@ -8,7 +8,8 @@ Version 1.2.0.dev0
   * toggle buttons to on/off editor and preview
   * tabs setting in status bar
   * preferences are save automatical
-  * auto indent is configurable
+  * auto indent is switchable
+  * showing line numbers is switchable
 
 Version 1.1.0 - 03.08.2017 7:00
 
